I have now QR Code Generator function in my program which I added specific codes, buttons, and picture box in my program, and this QR Code Generator is mostly complete.

--- a/Romero - Rymirox' Contact Tracing/Romero - Rymirox' Contact Tracing.csproj
+++ b/Romero - Rymirox' Contact Tracing/Romero - Rymirox' Contact Tracing.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Zen.Barcode.Rendering.Framework" Version="3.1.10729.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
