I finished the QR Code Generator function in my program. I change my NuGet Package for my QR Code Generator from Zen Barcode to QRCoder and I also change my code.The QR Code Generator is usable and I will now proceed to QR Code Scanner.

--- a/Romero - Rymirox' Contact Tracing/Romero - Rymirox' Contact Tracing.csproj
+++ b/Romero - Rymirox' Contact Tracing/Romero - Rymirox' Contact Tracing.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Zen.Barcode.Rendering.Framework" Version="3.1.10729.1" />
+    <PackageReference Include="QRCoder" Version="1.4.3" />
   </ItemGroup>
 
   <ItemGroup>
